# alphalabs

./: .gitignore  CITATION.bib  LICENSE  README.md  next.config.js  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: nextjs.yml
app/: layout.tsx  page.tsx
app/about/: page.tsx
app/collection/: layout.tsx  page.tsx
components/: colab-icon.tsx  icons.tsx  navbar.tsx  sim-code.tsx
config/: about.ts  collection.ts  fonts.ts  site.ts
mechanics/: plot.py  plots.ipynb  scene.py  setup.py  utils.py
mechanics/dynamics/: center_of_mass.ipynb  newton_law_1.ipynb  newton_law_2.ipynb  newton_law_3.ipynb
mechanics/kinematics/: 1D_motion.ipynb  1d_motion.ipynb  2D_motion.ipynb  2d_motion.ipynb  free_fall.ipynb  pendulum_spring.ipynb  pendulum_swing.ipynb  spring_pendulum.ipynb  swing_pendulum.ipynb
mechanics/momentum/: angular_momentum.ipynb  collisions.ipynb
mechanics/statics/: inclined_plane.ipynb  lever.ipynb
output/: README.md
