[project]
name = "alphalabs"
version = "0.1.0"
description = "Computer simulations of phyisical phenomenon for education."
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "mujoco==3.8.1",
    "dm-control==1.0.41",
    "ipykernel==7.2.0",
    "matplotlib==3.10.9",
    "mediapy==1.2.6",
    "numpy==2.4.6",
    "scipy==1.17.1",
    "seaborn==0.13.2",
]
